# Lighting_system

./: README.md
central_ai_hub/: package.xml  setup.cfg  setup.py
central_ai_hub/central_ai_hub/: central_ai_hub.py
lighting_system_launch/: package.xml  setup.cfg  setup.py
lighting_system_launch/launch/: lighting_system_launch.py
multi_sensor_array/: package.xml  setup.cfg  setup.py
multi_sensor_array/multi_sensor_array/: multi_sensor_node.py
room_control_nodes/: package.xml  setup.cfg  setup.py
room_control_nodes/room_control_nodes/: room_control_node.py
sensor_control_gui/: package.xml  setup.cfg  setup.py
sensor_control_gui/sensor_control_gui/: sensor_control_gui.py
