<?xml version="1.0"?>
<package format="3">
  <name>lighting_system_launch</name>
  <version>0.0.0</version>
  <description>Fichier de lancement pour le système d'éclairage intelligent</description>
  <maintainer email="ton_email@example.com">ton_nom</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

